--- a/CookPopularControl/Themes/BaseStyle/TabControlBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/TabControlBaseStyle.xaml
@@ -10,7 +10,7 @@
 
     <Style x:Key="TabItemStyle" TargetType="{x:Type TabItem}">
         <Setter Property="MinHeight" Value="30" />
-        <Setter Property="Foreground" Value="{DynamicResource PrimaryForegroundBrush}" />
+        <Setter Property="Foreground" Value="{DynamicResource ControlForegroundBrush}" />
         <Setter Property="Background" Value="{DynamicResource PrimaryThemeBrush}" />
         <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}" />
         <Setter Property="BorderThickness" Value="0" />
