--- a/CookPopularControl/Themes/TextBlockStyle.xaml
+++ b/CookPopularControl/Themes/TextBlockStyle.xaml
@@ -7,8 +7,7 @@
     </ResourceDictionary.MergedDictionaries>
 
     <Style x:Key="DefaultTextBlockStyle" TargetType="{x:Type TextBlock}">
-        <!--<Setter Property="Foreground" Value="{DynamicResource PrimaryForegroundBrush}" />-->
-        <Setter Property="Foreground" Value="Black" />
+        <Setter Property="Foreground" Value="{DynamicResource PrimaryForegroundBrush}" />
         <Setter Property="FontSize" Value="{DynamicResource DefaultFontSize}" />
         <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}" />
     </Style>
@@ -25,6 +24,12 @@
 
     <Style x:Key="FirstTitleTextBlockStyle" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource ThirdTitleTextBlockStyle}">
         <Setter Property="FontSize" Value="{DynamicResource FirstTitleFontSize}" />
+    </Style>
+
+    <Style x:Key="DefaultTextElementStyle" TargetType="{x:Type TextElement}">
+        <Setter Property="Foreground" Value="{DynamicResource PrimaryForegroundBrush}" />
+        <Setter Property="FontSize" Value="{DynamicResource DefaultFontSize}" />
+        <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}" />
     </Style>
 
 </ResourceDictionary>
