--- a/MvvmTestDemo/DemoViews/ComboBoxDemo.xaml
+++ b/MvvmTestDemo/DemoViews/ComboBoxDemo.xaml
@@ -6,6 +6,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
              mc:Ignorable="d"
+             Foreground="{StaticResource PrimaryForegroundBrush}"
              d:DataContext="{Binding RelativeSource={RelativeSource Self}}"
              d:DesignHeight="450"
              d:DesignWidth="800">
