--- a/MvvmTestDemo/UserControls/Adorner.xaml
+++ b/MvvmTestDemo/UserControls/Adorner.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl x:Name="RootDecorator"
-             x:Class="MvvmTestDemo.UserControls.AdornerDemo"
+             x:Class="MvvmTestDemo.UserControls.Adorner"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
