--- a/CookPopularControl/Themes/BaseStyle/TimePickerBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/TimePickerBaseStyle.xaml
@@ -14,12 +14,15 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type RadioButton}">
-                    <Border x:Name="border" Background="{TemplateBinding Background}" CornerRadius="15">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    <Border Background="{TemplateBinding Background}" CornerRadius="15">
+                        <ContentPresenter x:Name="Content"
+                                          HorizontalAlignment="Center" VerticalAlignment="Center"
+                                          TextElement.Foreground="{TemplateBinding Foreground}" />
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsChecked" Value="True">
-                            <Setter Property="Background" Value="{DynamicResource PrimaryThemeBrush}" TargetName="border" />
+                            <Setter Property="TextElement.Foreground" Value="{DynamicResource ControlForegroundBrush}" TargetName="Content" />
+                            <Setter Property="Background" Value="{DynamicResource PrimaryThemeBrush}" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -27,11 +30,10 @@
         </Setter>
     </Style>
 
-    <Style x:Key="ClockBaseStyle" TargetType="{x:Type pc:Clock}" BasedOn="{StaticResource ControlBaseStyle}">
+    <Style x:Key="ClockBaseStyle" TargetType="{x:Type pc:Clock}" BasedOn="{StaticResource FixedControlBaseStyle}">
         <Setter Property="Width" Value="200" />
         <Setter Property="Height" Value="300" />
         <Setter Property="BorderThickness" Value="2" />
-        <Setter Property="Background" Value="White" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type pc:Clock}">
