--- a/CookPopularControl/Themes/CookColors/LightColor.xaml
+++ b/CookPopularControl/Themes/CookColors/LightColor.xaml
@@ -9,6 +9,7 @@
     <Color x:Key="AssistantThemeColor">#563535</Color>
     <SolidColorBrush x:Key="PrimaryThemeBrush" Color="{StaticResource PrimaryThemeColor}" />
     <SolidColorBrush x:Key="AssistantThemeBrush" Color="{StaticResource AssistantThemeColor}" />
+    <SolidColorBrush x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type Brush}, ResourceId=PrimaryThemeBrush}" Color="{StaticResource PrimaryThemeColor}" />
 
     <Color x:Key="BorderBrushColor">#808080</Color>
     <Color x:Key="ControlMouseOverColor">#E0E0E0</Color>
@@ -17,10 +18,10 @@
     <SolidColorBrush x:Key="ControlMouseOverBackground" Color="{StaticResource ControlMouseOverColor}" />
     <SolidColorBrush x:Key="ControlPressBackground" Color="{StaticResource ControlPressColor}" />
 
-    <Color x:Key="PrimaryForegroundColor">#4A4A4A</Color>
-    <Color x:Key="AssistantForegroundColor">#4A4A4A</Color>
+    <Color x:Key="PrimaryForegroundColor">#2C2C2C</Color>
+    <Color x:Key="ControlForegroundColor">#2C2C2C</Color>
     <SolidColorBrush x:Key="PrimaryForegroundBrush" Color="{StaticResource PrimaryForegroundColor}" />
-    <SolidColorBrush x:Key="AssistantForegroundBrush" Color="{StaticResource AssistantForegroundColor}" />
+    <SolidColorBrush x:Key="ControlForegroundBrush" Color="{StaticResource ControlForegroundColor}" />
 
     <SolidColorBrush x:Key="RippleFeedback" Color="{x:Static SystemColors.ControlColor}" />
 
