--- a/CookPopularControl/Themes/CookColors/OrangeColor.xaml
+++ b/CookPopularControl/Themes/CookColors/OrangeColor.xaml
@@ -17,10 +17,10 @@
     <SolidColorBrush x:Key="ControlMouseOverBackground" Color="{StaticResource ControlMouseOverColor}" />
     <SolidColorBrush x:Key="ControlPressBackground" Color="{StaticResource ControlPressColor}" />
 
-    <Color x:Key="PrimaryForegroundColor">#4A4A4A</Color>
-    <Color x:Key="AssistantForegroundColor">#FFFFFF</Color>
+    <Color x:Key="PrimaryForegroundColor">#2C2C2C</Color>
+    <Color x:Key="ControlForegroundColor">#FFFFFF</Color>
     <SolidColorBrush x:Key="PrimaryForegroundBrush" Color="{StaticResource PrimaryForegroundColor}" />
-    <SolidColorBrush x:Key="AssistantForegroundBrush" Color="{StaticResource AssistantForegroundColor}" />
+    <SolidColorBrush x:Key="ControlForegroundBrush" Color="{StaticResource ControlForegroundColor}" />
 
     <SolidColorBrush x:Key="RippleFeedback" Color="{x:Static SystemColors.ControlColor}" />
 
