--- a/CookPopularControl/Themes/ToolBarStyle.xaml
+++ b/CookPopularControl/Themes/ToolBarStyle.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:pc="clr-namespace:CookPopularControl.Controls"
                     xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml">
 
     <ResourceDictionary.MergedDictionaries>
@@ -17,18 +18,21 @@
 
     <Style x:Key="{x:Static ToolBar.CheckBoxStyleKey}" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource DefaultCheckBoxStyle}">
         <Setter Property="Margin" Value="8,0" />
+        <Setter Property="pc:CheckBoxAssistant.FillBrush" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ToolBar}}, Path=Foreground}" />
     </Style>
     <Style x:Key="{x:Static ToolBar.ComboBoxStyleKey}" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource DefaultComboBoxStyle}">
         <Setter Property="Margin" Value="8,0" />
     </Style>
     <Style x:Key="{x:Static ToolBar.MenuStyleKey}" TargetType="{x:Type Menu}" BasedOn="{StaticResource DefaultMenuStyle}">
         <Setter Property="Margin" Value="8,0" />
+        <Setter Property="Foreground" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ToolBar}}, Path=Foreground}" />
     </Style>
     <!--<Style x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type MenuItem}, ResourceId=MenuItemStyleKey}" TargetType="{x:Type MenuItem}" BasedOn="{StaticResource DefaultMenuItemStyle}">
 
     </Style>-->
     <Style x:Key="{x:Static ToolBar.RadioButtonStyleKey}" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource DefaultRadioButtonStyle}">
         <Setter Property="Margin" Value="8,0" />
+        <Setter Property="pc:RadioButtonAssistant.CheckedBrush" Value="{DynamicResource ControlForegroundBrush}" />
     </Style>
     <Style x:Key="{x:Static ToolBar.SeparatorStyleKey}" TargetType="{x:Type Separator}" BasedOn="{StaticResource VerticalSeparatorStyle}">
         <Setter Property="Margin" Value="8,0" />
@@ -69,7 +73,7 @@
         </Setter>
     </Style>
 
-    <Style x:Key="ToolBarVerticalOverflowToggleButtonStyle" TargetType="ToggleButton">
+    <Style x:Key="ToolBarVerticalOverflowToggleButtonStyle" TargetType="{x:Type ToggleButton}">
         <Setter Property="MinHeight" Value="0" />
         <Setter Property="MinWidth" Value="0" />
         <Setter Property="Template">
@@ -137,7 +141,7 @@
     </Style>
 
     <Style x:Key="DefaultToolBarStyle" TargetType="{x:Type ToolBar}">
-        <Setter Property="Foreground" Value="{DynamicResource PrimaryForegroundBrush}" />
+        <Setter Property="Foreground" Value="{DynamicResource ControlForegroundBrush}" />
         <Setter Property="Background" Value="{DynamicResource PrimaryThemeBrush}" />
         <Setter Property="ClipToBounds" Value="True" />
         <Setter Property="Padding" Value="6" />
