--- a/CookPopularControl/Themes/TreeViewStyle.xaml
+++ b/CookPopularControl/Themes/TreeViewStyle.xaml
@@ -9,11 +9,13 @@
 
     <Style x:Key="DefaultTreeViewStyle" TargetType="{x:Type TreeView}" BasedOn="{StaticResource TreeViewBaseStyle}">
         <Setter Property="common:FrameworkElementBaseAttached.CornerRadius" Value="2" />
+        <Setter Property="common:FrameworkElementBaseAttached.ControlMouseOverBackground" Value="{DynamicResource ControlMouseOverBackground}" />
+        <Setter Property="common:FrameworkElementBaseAttached.ControlPressBackground" Value="{DynamicResource ControlPressBackground}" />
         <Setter Property="pc:TreeViewAssistant.ExpandButtonSize" Value="12" />
-        <Setter Property="pc:TreeViewAssistant.ExpandButtonFill" Value="{DynamicResource PrimaryForegroundBrush}" />
+        <Setter Property="pc:TreeViewAssistant.ExpandButtonFill" Value="{DynamicResource ControlForegroundBrush}" />
         <Setter Property="pc:TreeViewAssistant.HeaderIconHasItems" Value="{DynamicResource FolderGeometry}" />
         <Setter Property="pc:TreeViewAssistant.HeaderIconNoItems" Value="{DynamicResource FileGeometry}" />
-        <Setter Property="pc:TreeViewAssistant.HeaderIconFill" Value="{DynamicResource PrimaryForegroundBrush}" />
+        <Setter Property="pc:TreeViewAssistant.HeaderIconFill" Value="{DynamicResource ControlForegroundBrush}" />
         <Setter Property="pc:TreeViewAssistant.IsShowHeaderIcon" Value="False" />
         <Setter Property="pc:TreeViewAssistant.IsShowSelectedIcon" Value="False" />
         <Setter Property="pc:TreeViewAssistant.SelectedIcon" Value="{DynamicResource SuccessGeometry}" />
