--- a/MvvmTestDemo/DemoViews/MenuDemo.xaml
+++ b/MvvmTestDemo/DemoViews/MenuDemo.xaml
@@ -25,7 +25,7 @@
                      ContextMenu="{StaticResource DefaultContextMenu}"
                      Foreground="Red" />
 
-            <Menu Margin="0,50" Effect="{StaticResource ShadowEffectDepth1}" IsMainMenu="True">
+            <Menu Margin="0,50" IsMainMenu="True">
                 <MenuItem Header="File">
                     <MenuItem Header="Open" />
                     <MenuItem Header="Save As" />
@@ -42,26 +42,26 @@
                 <MenuItem Header="_Example">
                     <MenuItem Header="Close">
                         <MenuItem.Icon>
-                            <Path Data="{DynamicResource CloseGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" Stretch="Uniform" />
+                            <Path Data="{DynamicResource CloseGeometry}" Fill="{DynamicResource ControlForegroundBrush}" Stretch="Uniform" />
                         </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="Fatal">
                         <MenuItem.Icon>
-                            <Path Data="{DynamicResource FatalGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" Stretch="Uniform" />
+                            <Path Data="{DynamicResource FatalGeometry}" Fill="{DynamicResource ControlForegroundBrush}" Stretch="Uniform" />
                         </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="Leaf">
                         <MenuItem.Icon>
-                            <Path Data="{DynamicResource LeafGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" Stretch="Uniform" />
+                            <Path Data="{DynamicResource LeafGeometry}" Fill="{DynamicResource ControlForegroundBrush}" Stretch="Uniform" />
                         </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="Plane">
                         <MenuItem.Icon>
-                            <Path Data="{DynamicResource PlaneGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" Stretch="Uniform" />
+                            <Path Data="{DynamicResource PlaneGeometry}" Fill="{DynamicResource ControlForegroundBrush}" Stretch="Uniform" />
                         </MenuItem.Icon>
                     </MenuItem>
-                    <Separator Height="5" Background="Red" />
-                    <MenuItem Header="篮球" IsCheckable="True" IsChecked="True" />
+                    <Separator Height="2" Background="Red" />
+                    <MenuItem Header="篮球" IsChecked="True" IsCheckable="True" />
                     <MenuItem Header="足球" IsCheckable="True" />
                     <MenuItem Header="排名">
                         <MenuItem Header="First" IsCheckable="True" />
@@ -69,26 +69,26 @@
                         <MenuItem Header="Third" />
                     </MenuItem>
                 </MenuItem>
-                <Separator Width="3" Background="Red" Style="{StaticResource VerticalSeparatorStyle}" />
+                <Separator Width="5" Background="Red" Style="{StaticResource VerticalSeparatorStyle}" />
                 <MenuItem Header="_Operation">
                     <MenuItem Command="Cut">
                         <MenuItem.Icon>
-                            <Path Data="{DynamicResource CutGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" Stretch="Uniform" />
+                            <Path Data="{DynamicResource CutGeometry}" Fill="{DynamicResource ControlForegroundBrush}" Stretch="Uniform" />
                         </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Command="Copy">
                         <MenuItem.Icon>
-                            <Path Data="{DynamicResource CopyGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" Stretch="Uniform" />
+                            <Path Data="{DynamicResource CopyGeometry}" Fill="{DynamicResource ControlForegroundBrush}" Stretch="Uniform" />
                         </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Command="Paste">
                         <MenuItem.Icon>
-                            <Path Data="{DynamicResource PasteGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" Stretch="Uniform" />
+                            <Path Data="{DynamicResource PasteGeometry}" Fill="{DynamicResource ControlForegroundBrush}" Stretch="Uniform" />
                         </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Command="SelectAll">
                         <MenuItem.Icon>
-                            <Path Data="{DynamicResource SelectAllGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" Stretch="Uniform" />
+                            <Path Data="{DynamicResource SelectAllGeometry}" Fill="{DynamicResource ControlForegroundBrush}" Stretch="Uniform" />
                         </MenuItem.Icon>
                     </MenuItem>
                 </MenuItem>
