--- a/MvvmTestDemo/DemoViews/OtherControlsDemo.xaml
+++ b/MvvmTestDemo/DemoViews/OtherControlsDemo.xaml
@@ -7,6 +7,7 @@
              xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
              xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml"
              mc:Ignorable="d"
+             Foreground="#2C2C2C"
              d:DesignHeight="650"
              d:DesignWidth="800"
              DataContext="{Binding RelativeSource={RelativeSource Self}}">
