--- a/MvvmTestDemo/DemoViews/PanelDemo.xaml
+++ b/MvvmTestDemo/DemoViews/PanelDemo.xaml
@@ -1,31 +1,36 @@
 ﻿<UserControl x:Class="MvvmTestDemo.DemoViews.PanelDemo"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:MvvmTestDemo.DemoViews"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    
-    <StackPanel>
-        <pc:UniformStackPanel Background="Green" Orientation="Horizontal" UniformType="Every" Height="100"
-                              ItemsVerticalAlignment="Stretch">
-            <Button Width="100" Content="Chance2" Background="Red"/>
-            <Button Width="100" Content="Chance1" Background="Red"/>
-            <Button Width="100" Content="Chance3" Background="Red"/>
+             mc:Ignorable="d"
+             d:DesignHeight="450"
+             d:DesignWidth="800">
+
+    <StackPanel VerticalAlignment="Center">
+        <pc:UniformStackPanel Height="100"
+                              Background="{x:Static SystemColors.ControlBrush}"
+                              ItemsVerticalAlignment="Stretch" Orientation="Horizontal" UniformType="Every">
+            <Button Width="100" Content="Chance2" />
+            <Button Width="100" Content="Chance1" />
+            <Button Width="100" Content="Chance3" />
         </pc:UniformStackPanel>
-        <pc:UniformStackPanel Background="MediumTurquoise" Orientation="Vertical" UniformType="Every" Height="200"
-                              ItemsHorizontalAlignment="Stretch" Margin="0,20">
-            <Button Width="200" Content="Chance1" Background="Red"/>
-            <Button Width="200" Content="Chance2" Background="Red"/>
-            <Button Width="200" Content="Chance3" Background="Red"/>
+        <pc:UniformStackPanel Height="200"
+                              Background="{x:Static SystemColors.ControlBrush}"
+                              Margin="0,20"
+                              ItemsHorizontalAlignment="Stretch" Orientation="Vertical" UniformType="Every">
+            <Button Width="200" Content="Chance1" />
+            <Button Width="200" Content="Chance2" />
+            <Button Width="200" Content="Chance3" />
         </pc:UniformStackPanel>
-        <pc:UniformStackPanel Background="Purple" Orientation="Vertical" UniformType="Item" Height="200"
-                              ItemsHorizontalAlignment="Stretch">
-            <Button Width="200" Content="Chance1" Background="Red"/>
-            <Button Width="200" Content="Chance2" Background="Red"/>
-            <Button Width="200" Content="Chance3" Background="Red"/>
+        <pc:UniformStackPanel Height="200"
+                              Background="{x:Static SystemColors.ControlBrush}"
+                              ItemsHorizontalAlignment="Stretch" Orientation="Vertical" UniformType="Item">
+            <Button Width="200" Content="Chance1" />
+            <Button Width="200" Content="Chance2" />
+            <Button Width="200" Content="Chance3" />
         </pc:UniformStackPanel>
     </StackPanel>
 </UserControl>
