--- a/MvvmTestDemo/DemoViews/ScrollViewerDemo.xaml
+++ b/MvvmTestDemo/DemoViews/ScrollViewerDemo.xaml
@@ -10,7 +10,7 @@
              d:DesignWidth="800">
 
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-        <WrapPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+        <WrapPanel>
             <ScrollBar Width="50" Height="100"
                        BorderBrush="{StaticResource AssistantThemeBrush}"
                        BorderThickness="1"
@@ -26,8 +26,8 @@
                        Value="0"
                        Minimum="0" Maximum="100"
                        Margin="30,0"
-                       pc:ScrollBarAssistant.IsShowScrollBarRepeatButton="False" pc:ScrollBarAssistant.ThumbInsideMargin="0,5"
-                       Orientation="Vertical"
+                       pc:ScrollBarAssistant.IsShowScrollBarRepeatButton="False"
+                       pc:ScrollBarAssistant.ThumbInsideMargin="0,5" Orientation="Vertical"
                        Style="{StaticResource ThumbMarginScrollBarStyle}" />
             <ScrollBar Width="300" Height="50"
                        BorderBrush="{StaticResource AssistantThemeBrush}"
